--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,100 @@
 body {
+	font-family: Verdana, sans;
     text-align: center;
+}
+
+.game-header {
+	color: #fff;
+	background: #008000;
+	font-size: 3em;
+	padding: 50px;
+}
+
+.scoreboard {
+	color: #fff;
+	background: #008000;
+	width: 405px;
+	margin: 0 auto;
+	padding: 5px;
+	border-radius: 20px;
+}
+
+/* Modals */
+
+/* Start Modal */
+.start,
+.gameOver {
+    display: block;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.9);
+}
+
+/* Start Modal */
+.gameOver {
+    display: none;
+}
+
+.modal-header {
+	color: #fff;
+	background: #008000;
+	font-size: 3em;
+	padding: 50px;
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding-bottom: 32px;
+    border: 1px solid #888;
+    width: 80%;
+    text-align: center;
+}
+
+.intro,
+.results {
+	font-size: 2em;
+}
+
+.title {
+	color: #008000;
+	font-weight: bold;
+}
+
+.playBtn,
+.restartBtn {
+	color: #fff;
+	display: block;
+	border-radius: 10px;
+	background: #008000;
+	font-size: 2em;
+	font-weight: bold;
+	margin: 30px auto;
+	padding: 30px;
+	width: 200px;
+	height: 100%;
+	cursor: pointer;
+}
+
+.restartBtn {
+	width: 300px;
+}
+
+.ending {
+	color: #f00;
+	font-size: 2.5em;
+	font-weight: bold;
+	margin-bottom: 40px;
+}
+
+img:focus {
+    background-image: url(../images/Selector.png);
+    outline: none;
 }
